<resources>
    <!-- Main values-->
    <string name="app_name">Кофеёк</string>
    <string name="title_activity_maps">Кофеёк</string>
    <string name="title_activity_settings">Settings</string>

    <string name="cafe_closed">закрыто</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="action_settings">1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="about">О приложении</string>
    <string name="dialog_button_ok">Поделиться!</string>
    <string name="dialog_button_cancel">Отмена</string>
    <string name="text_help_add_button">Маркер можно переместить для того, что бы указать местоположение точнее</string>

    <!-- AddCafeFragment values (ACF)-->
    <!-- TextView - (TV)-->
    <string name="ACF_TV_New_Place">Новое место?</string>
    <string name="ACF_Input_Opening">Открытие</string>
    <string name="ACF_TV_Name">Как называется?</string>
    <string name="ACF_TV_Splitter"> : </string>
    <string name="ACF_Input_CafeName">Введи название кафе</string>
    <string name="ACF_TV_WorkTime">Часы работы</string>
    <string name="ACF_Input_ClosingTime">Закртие</string>
    <string name="ACF_TV_WorkTime_Always">24/7</string>
    <string name="ACF_TV_WorkTime_9_20">09:00 – 20:00</string>
    <string name="ACF_TV_WorkTime_Another">Другое</string>
    <string name="ACF_TV_Comment">Комментарий</string>
    <string name="ACF_Input_Comment">Оставьте свой комментарий</string>
    <string name="ACF_TV_Mark">Оценка</string>

    <!--BottomSheet-->
    <string name="bs_voite_first">
        <u>Будь первым, кто оценит!</u>
    </string>

    <!--Google plus Login-->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Загрузка…</string>
    <string name="SignIn">Авторизуйтесь</string>

    <string name="server_client_id">954534495444-9e8r96u45rq4ld9vhha01u9cj64aliso.apps.googleusercontent.com</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="for_add_cafe_need_sign_in">Для того, что бы ты мог добавить новое место, авторизуйся в несколько кликов!</string>
    <string name="hi_friend">Привет, друг!</string>
    <string name="cat">cat</string>
    <string name="be_first">Будь первым кто оценит! :)</string>

    <!--TimePickerDialog-->
    <string name="tab_from_name">Работает с</string>
    <string name="tab_to_name">Работает до</string>
    <string name="positive_button">ок</string>
    <string name="negative_button">отмена</string>
    <string name="all_day">Весь день (24 часа)</string>
    <string name="how_work">Как работает?</string>


</resources>
