<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:text="@string/hi_friend"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:padding="10dp"
            android:layout_gravity="bottom"
            android:textSize="25sp"
            android:id="@+id/textView2" />

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/cat"
            android:layout_gravity="center"
            app:srcCompat="@drawable/cat1"
            android:id="@+id/imageView2"
            android:layout_marginEnd="57dp" />
    </LinearLayout>

    <TextView
        android:text="@string/for_add_cafe_need_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingBottom="5dp"
        android:textSize="16sp"
        android:textAlignment="center"
        android:id="@+id/textView7" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>