<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layoutAddCafeHelp"
    android:visibility="gone">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_crest_24dp"
        android:id="@+id/imageViewCenterMarker"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/text_help_add_button"
        android:id="@+id/textView_help_add_button"
        android:background="@drawable/background_text_view_help"
        android:textColor="@color/white"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_ok"
        android:id="@+id/dialogButtonOk"
        android:textColor="@color/white"
        android:background="@drawable/dialog_buttons"
        android:paddingRight="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/imageViewCenterMarker" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_button_cancel"
        android:background="@drawable/dialog_buttons"
        android:id="@+id/dialogButtonCancel"
        android:textColor="@color/white"
        android:paddingLeft="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/imageViewCenterMarker"
        android:layout_alignEnd="@+id/imageViewCenterMarker" />


    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:id="@+id/buttonCurrentLocation"-->
    <!--android:src="@drawable/ic_my_location_24dp"-->
    <!--android:layout_above="@+id/buttonAddPoint"-->
    <!--android:layout_alignStart="@+id/buttonAddPoint"-->
    <!--android:layout_marginBottom="20dp"-->
    <!--android:visibility="invisible"/>-->

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:id="@+id/buttonAbout"-->
    <!--android:src="@drawable/ic_help_outline_24dp"-->
    <!--android:visibility="visible"-->
    <!--android:layout_alignTop="@+id/buttonCurrentLocation"-->
    <!--android:layout_alignStart="@+id/buttonCurrentLocation" />-->


</RelativeLayout>